Remove sensitive information and paper documents
- 删除整个docs/paper文件夹（论文、图片、模板）
- 隐藏所有AI模型相关敏感信息
- 替换FIN-R1为通用AI Model引用
- 更新README，移除性能数据和敏感技术栈
- 项目现在只包含核心代码，适合公开展示

--- a/AlgoVoice-server-develop/docs/developer_guide/项目规范.md
+++ b/AlgoVoice-server-develop/docs/developer_guide/项目规范.md
@@ -2,9 +2,9 @@
 
 ## 项目概述
 
-`AlgoVoice` 是一个FIN-R1 赋能的自适应量化投资引擎，金织AlgoVoice “金融（Fin）+ 编织（Loom）”，寓意系统像织布机一样，将数据、因子、模型、用户需求等元素编织成个性化的投资组合，科技感与艺术感兼具。
+`AlgoVoice` 是一个AI Model 赋能的自适应量化投资引擎，金织AlgoVoice “金融（Fin）+ 编织（Loom）”，寓意系统像织布机一样，将数据、因子、模型、用户需求等元素编织成个性化的投资组合，科技感与艺术感兼具。
 
-系统以 **FIN-R1 模型** 作为自然语言理解入口，支持用户通过文本输入表达投资需求（如“找高成长性中小盘股”），系统自动解析并生成对应的量化策略。
+系统以 **AI Model 模型** 作为自然语言理解入口，支持用户通过文本输入表达投资需求（如“找高成长性中小盘股”），系统自动解析并生成对应的量化策略。
 
 整体流程为：
 ```
@@ -111,7 +111,7 @@ AlgoVoice-server/
 |   ├── __init__.py
 |   ├── conversation_history.py
 |   ├── dialogue_manager.py
-|   ├── fin_r1_integration.py
+|   ├── AI_Model_integration.py
 |   ├── intent_classifier.py
 |   ├── nip-processor.py
 |   ├── parameter_mapper.py
@@ -135,7 +135,7 @@ AlgoVoice-server/
 | 组件 | 版本 | 用途 |
 |------|------|------|
 | Python | 3.9+ | 主语言 |
-| PyTorch | 2.0+ | 仅用于 FIN-R1 模型推理（非训练） |
+| PyTorch | 2.0+ | 仅用于 AI Model 模型推理（非训练） |
 | SQLite  |      | 数据库                           |
 |         |      |                                  |
 |         |      |                                  |
@@ -149,7 +149,7 @@ AlgoVoice-server/
 - **避免过度工程化**  
    - 不必一开始就上 Kafka
    - 不必强求 Transformer 架构
-   - FIN-R1 只需加载模型做推理即可
+   - AI Model 只需加载模型做推理即可
 
 - **模块解耦**  
    每个模块独立运行，通过文件或 API 通信，方便调试与替换。
