--- a/AlgoVoice-server-develop/docs/系统配置说明.md
+++ b/AlgoVoice-server-develop/docs/系统配置说明.md
@@ -76,21 +76,21 @@ ai_model:
 
 **重要说明**:
 - 系统采用**主备容错机制**
-- **主服务**: FIN-R1 本地模型（优先使用）
-- **备用服务**: 阿里云API（FIN-R1失败时自动切换）
+- **主服务**: AI Model 本地模型（优先使用）
+- **备用服务**: 阿里云API（AI Model失败时自动切换）
 - API密钥需要从阿里云控制台获取: https://dashscope.console.aliyun.com/
 
 ---
 
 ## 2. 模型配置 (model_config.yaml)
 
-### FIN-R1 本地模型配置
+### AI Model 本地模型配置
 
-参见: `module_10_ai_interaction/config/fin_r1_config.yaml`
+参见: `module_10_ai_interaction/config/AI_Model_config.yaml`
 
 ```yaml
 model:
-  model_path: ".Fin-R1"          # 模型文件路径
+  model_path: ".AI Model"          # 模型文件路径
   device: "cpu"                  # 运行设备: cpu 或 cuda
   batch_size: 1                  # 批处理大小
   max_length: 2048               # 最大序列长度
@@ -185,7 +185,7 @@ aliyun:
 
 ### 启用GPU加速
 
-修改 `module_10_ai_interaction/config/fin_r1_config.yaml`:
+修改 `module_10_ai_interaction/config/AI_Model_config.yaml`:
 
 ```yaml
 model:
@@ -272,10 +272,10 @@ python main.py --no-browser
 
 A: 是的，配置文件在系统启动时加载，修改后需要重启服务。
 
-### Q2: 如何禁用FIN-R1只使用阿里云？
+### Q2: 如何禁用AI Model只使用阿里云？
 
 A: 两种方法：
-1. 删除或重命名 `.Fin-R1` 目录
+1. 删除或重命名 `.AI Model` 目录
 2. 系统会自动检测并切换到阿里云
 
 ### Q3: 配置文件损坏怎么办？
